2001-10-25  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h:
	* src/java.g (SwitchBlock): Mark blocks inside a switch statement
	with AstBlock::SWITCH, for use in definite assignment analysis.
	* src/javaact.cpp: Regenerate.
	* src/definite.cpp:
	* src/semantic.h:
	* src/expr.cpp:
	* src/set.h: Overhaul definite assignment analysis, to bring it
	line with 2nd edition JLS. In the process, fixed bugs: 192, 603,
	606, 610, 623 - patch 209.
	
2001-10-17  Eric B Blake  <ebb9@email.byu.edu>

	* src/long.cpp (operator/, operator%): Suppress a warning in the
	HP aCC compiler.

2001-10-16  Eric Blake  <ebb9@email.byu.edu>

	* src/op.h:
	* src/op.cpp:
	* src/bytecode.cpp: Change OP_INVOKENONVIRTUAL to OP_INVOKESPECIAL,
	the new name in the second edition JVMS - patch 208.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/unparse.cpp: Adjust bodies to use LexStream*.  Replace a use
	of "\n" by endl.  Add comment.  Make line breaks in if statements
	consistent.
	* src/ast.h: Adjust Unparse prototypes to take LexStream*, not
	LexStream&.
	* src/control.cpp (CleanUp): Use LexStream* - patch 198.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/bytecode.cpp (EmitAssignmentExpression): 
	* src/control.cpp (Serializable_type): 
	* src/depend.cpp (OutputMake): 
	* src/dump.cpp (Dump): Disambiguate error messages - patch 200.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/ast.cpp (AstSwitchBlockStatement): Fix some debug output
	formatting errors - patch 197.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/decl.cpp (ProcessFieldDeclaration): 
	* src/diagnose.cpp (getErrorMessage):
	* src/stream.cpp (ProcessInputUnicode): Explicitly initialize some
	variables, restrict scope of temporaries, and fix some comment
	typos - patches 202, 203.

2001-10-16  Michael Ernst  <mernst@alum.mit.edu>

	* src/platform.h: Add prototype SystemMkdirhierForFile.
	* src/platform.cpp (SystemMkdirhierForFile): Add definition.